...
        android:fontFamily="@font/alkatra"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingTop="0.5dp"
        android:paddingRight="10dp"
        android:paddingBottom="2dp"
        android:text="Happy"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
