...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"/>

    <!-- Skip Button -->
    <Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="45dp"
        android:backgroundTint="#222121"
...
